--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,15 @@ dependencies:
     sdk: flutter
 
 
+    
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.11.0
+  provider: ^6.0.2
+  firebase_app_check: ^0.0.6+5
 
 dev_dependencies:
   flutter_test:
