--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^1.11.0
   provider: ^6.0.2
   firebase_app_check: ^0.0.6+5
+  vertical_card_pager: ^1.5.0
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +64,12 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+   
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+                 
+  assets:     
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
