--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.2
   firebase_app_check: ^0.0.6+5
   vertical_card_pager: ^1.5.0
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
